# chmmpy

./: .gitignore  README.md  setup.py
chmmpy/: __init__.py  create_hmm_lp.py  hmmbase.py  util.py
cihmm/: __init__.py  create_hmm_lp.py  hmmbase.py  util.py
cpp/: CMakeLists.txt  HMM.h  main.cpp
cpp/examples/: CMakeLists.txt  main.cpp  simpleInfer.cpp  simpleInferMultiple.cpp  simpleLearn.cpp  simpleLearnMC.cpp  tourInfer.cpp  tourInferMultiple.cpp
cpp/include/: HMM.h
cpp/src/: HMM.cpp
examples/ireland/: ireland.py  ireland.yaml  results1_ip.json  results2_hmm.json  results2_ip.json  results2_lp.json
examples/process/: process.out  process.py  process1.yaml  results1_hmm.json  results1_ip.json  results1_lp.json  results2_hmm.json  results2_ip.json  results2_lp.json
examples/tour/: results1_hmm.json  results1_ip.json  results1_lp.json  results2_hmm.json  results2_ip.json  results2_lp.json  tour.out  tour.py  tour1.yaml
examples/travel/: results1_hmm.json  results1_ip.json  results1_lp.json  results2_hmm.json  results2_ip.json  results2_lp.json  travel.out  travel.py  travel1.yaml
